[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "ansible-sdk"
dynamic = ["version"]
authors = [
    {name = "Ansible, Inc.", email = "info@ansible.com"},
]
description = "Consistent Ansible SDK for Python"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "ansible-core",
    "ansible-runner",
    "receptorctl",
]

[project.urls]
Documentation = "https://ansible-sdk.readthedocs.io/en/latest/"
Source = "https://github.com/ansible/ansible-sdk"


[project.optional-dependencies]
test = [
    "pytest",
]
doc = ["sphinx"]

[tool.setuptools.dynamic]
version = {attr = "ansible_sdk.__version__"}

[tool.pylint.main]
output-format = "colorized"
max-line-length=120
disable = [
  "all",

  # Some codes we will leave disabled
  "C0103",  # invalid-name
  "C0114",  # missing-module-docstring
  "C0115",  # missing-class-docstring
  "C0116",  # missing-function-docstring

  "R0902",  # too-many-instance-attributes

  "W1514",  # unspecified-encoding
]

enable = [
  "C0206",  # consider-using-dict-items
  "C0209",  # consider-using-f-string
  "C0411",  # wrong-import-order

  "E1101",  # no-member

  "R0205",  # useless-object-inheritance
  "R0402",  # consider-using-from-import
  "R1705",  # no-else-return
  "R1725",  # super-with-arguments
  "R1735",  # use-dict-literal

  "W0102",  # dangerous-default-value
  "W0707",  # raise-missing-from
  "W1203",  # logging-fstring-interpolation

]
