[metadata]
name = ansible-sdk
author = Ansible, Inc.
author_email = info@ansible.com
summary = "Consistent Ansible SDK for Python"
home_page = https://ansible-sdk.readthedocs.io
project_urls =
    Source = https://github.com/ansible/ansible-sdk
description_file = README.md
description_content_type = text/markdown
license_files = LICENSE.md
version = attr: ansible_sdk.__version__
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Topic :: Software Development :: Libraries :: Application Frameworks',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11']

[options]
install_requires =
    ansible-core
    ansible-runner
    receptorctl
python_requires = >=3.9


[files]
packages = ansible_sdk


[flake8]
# W503 - Line break occurred before a binary operator
ignore=W503
max-line-length=160
